tests/macro/invalid_result.stderr
error[E0412]: cannot find type `DoesNotExist` in this scope
 --> $DIR/invalid_result.rs:6:41
  |
6 | #[endpoint(path = "test/path", result = "DoesNotExist")]
  |                                         ^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `rustify::endpoint::Endpoint`
 --> $DIR/invalid_result.rs:1:5
  |
1 | use rustify::endpoint::Endpoint;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
